Throw correct errors for invalid OfflineAudioContext values

The spec basically says invalid values when constructing an
OfflineAudioContext should throw NotSupportedError.  We were throwing
a strange collection of SyntaxError and IndexSizeError along with
NotSupportedError.

BUG=702622
TEST=dom-exceptions.html

Review-Url: https://codereview.chromium.org/2758783002
Cr-Commit-Position: refs/heads/master@{#458087}

Former-commit-id: 4bfa49a0874b7cae2c5d04fd816f01345666fc76